[tool.poetry]
name = "pymaze"
version = "0.1.0"
description = ""
authors = ["Jörg Sesterhenn <joerg.sesterhenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
labyrinth-py = "^1.0.4"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
